--- a/MotoActions/AndroidManifest.xml
+++ b/MotoActions/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.lineageos.settings.device"
+    package="org.pixelexperience.settings.device"
     android:sharedUserId="android.uid.system"
     >
 
@@ -20,7 +20,7 @@
         android:persistent="true">
 
         <receiver
-            android:name="org.lineageos.settings.device.BootCompletedReceiver"
+            android:name="org.pixelexperience.settings.device.BootCompletedReceiver"
             android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -28,7 +28,7 @@
             </intent-filter>
         </receiver>
 
-        <service android:name="org.lineageos.settings.device.MotoActionsService"
+        <service android:name="org.pixelexperience.settings.device.MotoActionsService"
             android:permission="MotoActionsService"
             android:exported="false">
         </service>
@@ -39,7 +39,7 @@
             android:label="@string/ambient_display_gestures_title"
             android:theme="@style/Theme.SubSettingsBase">
             <intent-filter>
-                <action android:name="org.lineageos.settings.device.DOZE_SETTINGS" />
+                <action android:name="org.pixelexperience.settings.device.DOZE_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
